--- a/layouts/success.html
+++ b/layouts/success.html
@@ -40,7 +40,7 @@
                         </li>
                         <li class="flex items-start">
                             <span class="text-green-600 font-bold mr-3">✓</span>
-                            <span>You'll receive the <strong>@Paid Member</strong> role in Discord</span>
+                            <span>You'll receive the <strong>@Guild Subscriber</strong> role in Discord</span>
                         </li>
                         <li class="flex items-start">
                             <span class="text-green-600 font-bold mr-3">✓</span>
