--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
         <div class="max-w-6xl mx-auto px-5">
             <nav class="flex justify-between items-center py-4">
                 <div class="flex items-center">
-                    <a href="{{ "/" | relURL }}" class="flex items-center no-underline">
+                    <a href="{{ .Site.Home.RelPermalink }}" class="flex items-center no-underline">
                         <img src="{{ "logo.png" | relURL }}" alt="Triboar Guildhall" class="h-12 w-12 mr-3 mix-blend-multiply">
                         <span class="font-bold text-xl text-guild-brown">Triboar Guildhall</span>
                     </a>
