--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,17 +13,25 @@
 }
 
 /* Content styling for single page layouts */
+.setting-content > p:first-of-type {
+    font-family: 'Inter', 'Arial', sans-serif;
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: #555;
+    line-height: 1.7;
+    margin-bottom: 2.5rem;
+    text-align: center;
+}
+
 .setting-content h2 {
     font-family: 'Merriweather', 'Georgia', serif;
-    font-size: 2rem;
+    font-size: 2.25rem;
     font-weight: 700;
     color: #a36a3c;
-    margin-bottom: 2rem;
-    text-align: left;
+    margin-bottom: 3rem;
+    text-align: center;
     letter-spacing: 0.02em;
     line-height: 1.3;
-    border-bottom: 2px solid #d4a94c;
-    padding-bottom: 0.5rem;
 }
 
 .setting-content p {
