--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,10 +28,23 @@
     font-size: 2.25rem;
     font-weight: 700;
     color: #a36a3c;
+    margin-top: 2rem;
     margin-bottom: 3rem;
     text-align: center;
     letter-spacing: 0.02em;
     line-height: 1.3;
+}
+
+.setting-content hr {
+    display: block;
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+    border: none;
+    border-top: 1px solid #e5e5e5;
+}
+
+.setting-content hr + h2 {
+    padding-top: 1rem;
 }
 
 .setting-content p {
@@ -64,10 +77,31 @@
     padding-left: 0.5rem;
 }
 
-.setting-content > h2:nth-of-type(4) {
-    display: none;
-}
-
 .setting-content {
     max-width: 1140px;
+}
+
+/* Reset margins for elements inside shortcode cards */
+.setting-content .rounded-lg p,
+.setting-content .rounded-lg li {
+    margin-bottom: 0;
+}
+
+.setting-content .rounded-lg ul {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+/* Reset margins for grid-based shortcodes */
+.setting-content .grid ul,
+.setting-content .grid ul.space-y-3 {
+    margin-left: 0;
+    margin-bottom: 0;
+    list-style-type: none;
+}
+
+.setting-content .grid li,
+.setting-content .grid li.flex {
+    padding-left: 0;
+    margin-bottom: 0;
 }
